More Highlighting and Movement
Animation Framework as well

--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -148,8 +148,6 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece.BP_TokenPiece
-OpenAssetsAtExit=/Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode
-OpenAssetsAtExit=/Game/Divinum/Blueprints/Board/BP_Board.BP_Board
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1198,6 +1196,8 @@ AudioComponent.Events=True
 ParticleSystemComponent.Materials=True
 BP_TokenPiece_C.Setup=True
 BP_TokenPiece_C.Gameplay=True
+BP_TokenPiece_C.Default=True
+K2Node_Timeline.GraphNodeDetail=True
 
 [PathColor]
 /Game/Divinum=(R=0.000000,G=0.467784,B=0.032000,A=1.000000)
@@ -1387,10 +1387,10 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Divinum/Blueprints/TokenPieces/BPI_TokenPiece
-MRUItem1=/Game/Divinum/Blueprints/Board/BP_Board
-MRUItem2=/Game/Divinum/Blueprints/BP_Gamemode
-MRUItem3=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
+MRUItem0=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
+MRUItem1=/Game/Divinum/Blueprints/TokenPieces/BPI_TokenPiece
+MRUItem2=/Game/Divinum/Blueprints/Board/BP_Board
+MRUItem3=/Game/Divinum/Blueprints/BP_Gamemode
 MRUItem4=/Game/Divinum/Blueprints/Board/BP_BoardSquare
 MRUItem5=/Game/Divinum/Blueprints/BP_PlayerController
 MRUItem6=/Game/Divinum/Blueprints/Mouse_PlayerController
@@ -1588,7 +1588,7 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapp
 BP_Gamemode_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 K2Node_SwitchInteger=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref
-K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
 InputModifierDeadZone=
 InputModifierResponseCurveExponential=
 InputModifierFOVScaling=
@@ -1621,7 +1621,7 @@ GetHighlightedSquares=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWr
 GetHighlightedSquares_11=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 SelectSquare=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 SelectSquare_12=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
-K2Node=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+K2Node=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
 BP_TokenPiece_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
 Blueprint=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
 
