Highlight Possible Square function
Implemented the function for highlights possible squares for moves on the board.

--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -150,6 +150,7 @@ RecentAssetEditors=
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/Divinum/Blueprints/Board/BP_DeadSlot.BP_DeadSlot
 OpenAssetsAtExit=/Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode
+OpenAssetsAtExit=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece.BP_TokenPiece
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1402,9 +1403,9 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Divinum/Blueprints/BP_Gamemode
-MRUItem1=/Game/Divinum/Blueprints/Board/BP_DeadSlot
-MRUItem2=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
+MRUItem0=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
+MRUItem1=/Game/Divinum/Blueprints/BP_Gamemode
+MRUItem2=/Game/Divinum/Blueprints/Board/BP_DeadSlot
 MRUItem3=/Game/Divinum/Blueprints/TokenPieces/BPI_TokenPiece
 MRUItem4=/Game/Divinum/Blueprints/Board/BP_Board
 MRUItem5=/Game/Divinum/Blueprints/Board/BP_BoardSquare
@@ -1601,7 +1602,7 @@ EdGraph=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultV
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
 K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
-BP_Gamemode_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+BP_Gamemode_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 K2Node_SwitchInteger=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
@@ -1622,7 +1623,7 @@ MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
 BP_PlayerController_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 K2Node_InputAxisEvent=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
-K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
+K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
 UserDefinedStruct=
 ST_Move=
 CreateNotation=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
@@ -1642,6 +1643,7 @@ BP_TokenPiece_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.
 Blueprint=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
 BP_DeadSlot_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
+ProcessTokenPiece=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
 
 [AssetEditorToolkitTabLocation]
 /Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode=0
