Added some spot checking
Framework for checking if there are other pieces in the path of the selected token.

--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -118,14 +118,15 @@ MRUItem0=/Game/Divinum/Maps/TestMap
 LastLevel=/Game/Divinum/Maps/TestMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1275,7 +1276,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Architecture
+ContentBrowserTab1.SelectedPaths=/Game/Divinum/Blueprints/TokenPieces
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1660,6 +1661,9 @@ StaticMeshActor=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.
 ProcessTokenPiece=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
 HighlightPotentialSquare=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
 HighlightPotentialSquare_13=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
+EvaluateSpecialPath=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
+EvaluateSpecialPath_3=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
+BP_Special_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
 
 [AssetEditorToolkitTabLocation]
 /Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode=0
@@ -1692,6 +1696,7 @@ HighlightPotentialSquare_13=PropertyWrapper.DefaultValueCategory.Player0Ref,Prop
 /Game/Divinum/Materials/Mi_MarkerTokenPiece.Mi_MarkerTokenPiece=0
 /Game/Divinum/Blueprints/TokenPieces/BPI_TokenPiece.BPI_TokenPiece=0
 /Game/Divinum/Blueprints/Board/BP_DeadSlot.BP_DeadSlot=0
+/Game/Divinum/Blueprints/TokenPieces/BP_Special.BP_Special=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1927,8 +1932,8 @@ PrimType=2
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
-WindowSize=X=1277.000 Y=669.000
-InitiallyMaximized=False
+WindowSize=X=1276.000 Y=668.000
+InitiallyMaximized=True
 
 [Directories2]
 UNR=../../../../../DIVINUM/VIDEOGAME/divinum/Divinum/Content/Divinum/Maps
@@ -3016,8 +3021,8 @@ NullDrv.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/installs/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/installs/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoSaveMaxBackups=10
